<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="jinwoo.hw_2.LoginScreen">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_username"
        android:hint="@string/hint_username"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/input_password"
        android:hint="@string/hint_Password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:background="@drawable/vector_android"
        android:id="@+id/login_button"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_login"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        android:onClick="onClick"
        android:elevation="5dp"
        android:soundEffectsEnabled="true"
        android:textAllCaps="false" />

</android.support.constraint.ConstraintLayout>